--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <title>Dogs are cool!</title>
     </head>
     <body>
+      
+             <!-- OVERLAY -->
+  
+        <div class="overlay first"></div>
+        <div class="overlay second"></div>
+        <div class="overlay third"></div>
+      
               <!-- HEADER -->
       <header class="l-header">
             <nav class="nav bd-grid">
