--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <main class="l-main bd-grid">
             <div class="home">
                 <div class="home__information">
-                    <span class="home__pressent anime-text">Hello,</span>
-                    <h1 class="home__title anime-text">Poli</h1>
-                    <span class="home__skill anime-text">Developers</span>
+                    <span class="home__pressent anime-text">yo,</span>
+                    <h1 class="home__title anime-text">poli</h1>
+                    <span class="home__skill anime-text">i think she likes dogs lol</span>
 
                     <div>
-                        <a href="https://github.com/burootech" class="home__button anime-text">Our Github</a>
+                        <a href="https://www.google.com/search?q=dogs&rlz=1CAOEMI_enGB1094&oq=dogs&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTINCAEQLhiDARixAxiABDIKCAIQLhjUAhiABDIKCAMQLhjUAhiABDIKCAQQLhjUAhiABDIQCAUQLhjHARixAxjRAxiABDINCAYQABiDARixAxiABDIQCAcQLhiDARixAxiABBiKBTIKCAgQABixAxiABNIBBzU2N2owajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on" class="home__button anime-text">dogs</a>
                     </div>
                 </div>
   
